added adsense stuff

--- a/cms/include/header.tmpl
+++ b/cms/include/header.tmpl
@@ -225,3 +225,14 @@
 </mt:if>
     <$mt:var name="form_header"$>
     <div id="main-content"><div id="main-content-inner" class="inner pkg">
+    <script type="text/javascript"><!--
+google_ad_client = "pub-8235962495693803";
+/* 468x60, created 2/19/09 */
+google_ad_slot = "2284602441";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
